# Lane-detection

./: Lane_detection_PROI  config.txt  config.xml
src/: BirdsEyeView.cpp  BirdsEyeView.h  CMakeLists.txt  FourPoints.cpp  FourPoints.h  LaneDetect.cpp  LaneDetect.h  PolyFit.cpp  PolyFit.h  Polynomial.cpp  Polynomial.h  Window.cpp  Window.h  calibration.cpp  config.cpp  config.h  main.cpp
